Update swagger de las peticiones /preferences
